<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lista_pessoas_fragment_label">Pessoas</string>
    <string name="novo_pessoas_fragment_label">Nova Pessoa</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="morada">Morada</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="versao">Pessoas v. 1.0</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="preencha_nome">Preencha o título</string>
    <string name="preencha_telefone">Preencha o telefone</string>
    <string name="preencha_email">Preencha o email</string>
    <string name="preencha_morada">Preencha a morada</string>
    <string name="preencha_data_nascimento">Preencha a data de nascimento</string>
    <string name="erro_inserir_pessoa">Erro ao inserir PEssoa</string>
    <string name="utente_guardado_sucesso">PEssoa guardado com sucesso</string>
    <string name="data_de_nacimento">Data de Nacimento</string>
    <string name="nome_text">nome</string>
    <string name="editar_pessoa">editar_pessoa</string>
    <string name="nova_pessoa">nova pessoa</string>

</resources>