<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.ipg.trabalhofinal.MainActivity">
    <item
        android:id="@+id/action_nova_pessoa"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nova_pessoa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_editar_pessoa"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar_pessoa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_Pessoa"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="Eliminar pessoa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>