<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NovaPessoaFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_campos"
        android:hint="@string/nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage|textPersonName|textAutoComplete" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telefone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margem_campos"
                android:inputType="phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margem_campos"
                    android:inputType="textEmailAddress" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/morada">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMorada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margem_campos"
                        android:inputType="textPostalAddress" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margem_campos"
                        android:text="@string/data_nascimento" />

                    <CalendarView
                        android:id="@+id/calendarViewData"
                        android:layout_width="282dp"
                        android:layout_height="266dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>